<resources>
    <string name="app_name">CommunityApp</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_title">COMMUNITY APP</string>
    <string name="wp_login_button">Log In</string>
    <string name="wp_signup_button">Sign Up</string>
    <string name="uninstall_title">UNINSTALL</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="hint_username">Enter the email address</string>
    <string name="hint_password">Enter password</string>
    <string name="login_firstname">First Name</string>
    <string name="login_lastname">Last Name</string>
    <string name="login_email">Email</string>
    <string name="login_contact">Contact</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_gender">Gender</string>
    <string name="login_dob">DateofBirth</string>
    <string name="hint_firstname">Enter First Name</string>
    <string name="hint_lastname">Enter Last Name</string>
    <string name="hint_email">Enter Email Address</string>
    <string name="hint_contact">Enter Contact Number</string>
    <string name="rb_male">Male</string>
    <string name="rb_female">Female</string>
    <string name="hint_dob">mm/dd/yyyy</string>
    <string name="warning_username">Field cannot be EMPTY</string>
    <string name="warning_password">Field cannot be EMPTY</string>
    <string name="warning_username_only">Username cannot be EMPTY</string>
    <string name="warning_password_only">Password cannot be EMPTY</string>
    <string name="warning_fields">Fields cannot be EMPTY</string>
    <string name="signup_radioButton">RadioButton</string>
    <string name="generalMessage"> cannot be empty</string>
    <string name="allFieldsEmpty">Fields cannot be EMPTY</string>
    <string name="cv_contact">Not a valid CONTACT</string>
    <string name="cv_username_signup">Username must be atleast 8 characters long</string>
    <string name="cv_password_length">Password must be atleast 8 characters long</string>
    <string name="cv_password_lowercase">Password must have atleast 1 LowerCase letter</string>
    <string name="cv_password_uppercase">Password must have atleast 1 UpperCase letter</string>
    <string name="cv_password_number">Password must have atleast 1 Number</string>
    <string name="cv_password_specialCharacter">Password must have atleast 1 Special Character</string>
    <string name="cv_email_valid">Not a valid Email Address</string>
    <string name="cv_dob_valid">DOB invalid.Correct format: </string>
    <string name="title_activity_user_page">UserPage</string>
    <string name="title_activity_event_list">EventList</string>
    <string name="title_activity_event_description">EventDescription</string>
    <string name="title_activity_event_view">EventView</string>
    <string name="title_activity_event_map">EventMap</string>
    <string name="wrong_credentials">Matching Credentials Not Found</string>
    <string name="create_user_in_database_warning">Cannot create user. Error in Firebase</string>
    <string name="title_activity_main_application_window">MainApplicationWindow</string>
    <string-array name="items_gridview">
        <item>Tweets</item>
        <item>Events</item>
        <item>Courses</item>
        <item>Weather</item>
        <item>Information</item>
        <item>Emergency</item>
    </string-array>
    <string name="title_activity_courses_outer_list_view">CoursesOuterListView</string>
    <string name="title_activity_coa_list_view">CoaListView</string>
    <string name="title_activity_ce_list_view">CeListView</string>
    <string name="title_activity_cp_list_view">CpListView</string>
    <string name="title_activity_lsob_list_view">LsobListView</string>
    <string name="title_activity_soe_list_view">SoeListView</string>
    <string name="title_activity_sol_list_view">SolListView</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="title_activity_professor_description">ProfessorDescription</string>
    <string name="title_activity_information">Information</string>
    <string name="title_activity_email">Email</string>
    <string name="title_activity_video">Video</string>
    <string name="title_activity_emergency">Emergency</string>
    <string name="title_activity_tweets">tweets</string>
</resources>
